<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerRadius_cardView"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/pictureImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionNamePicture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundText_card">


            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userNameCard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_userName_card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstWord_Card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_textSize_card"/>

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_textSize_card"
                    android:layout_marginLeft="@dimen/timeCard_marginLeft_card"/>


            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_marginTop_card">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_textSize_card"
                    android:layout_marginLeft="@dimen/timeCard_marginLeft_card"/>

            </LinearLayout>

        </LinearLayout>
        
        
    </FrameLayout>

</android.support.v7.widget.CardView>
